--- a/multi-arch/packages/mottainai-scheduler/definition.yaml
+++ b/multi-arch/packages/mottainai-scheduler/definition.yaml
@@ -1,6 +1,6 @@
 category: "dev-util"
 name: "mottainai-scheduler"
-version: "0.1.0_pre20210620"
+version: "0.1.0_pre20210620+1"
 requires:
 - category: "users"
   name: "mottainai-agent"
