--- a/multi-arch/packages/pkgs-checker-minimal/definition.yaml
+++ b/multi-arch/packages/pkgs-checker-minimal/definition.yaml
@@ -1,11 +1,11 @@
 category: "dev-util"
 name: "pkgs-checker-minimal"
 description: "pkgs-checker version (without CGO stuff)"
-version: "0.8.1+1"
+version: "0.8.2"
 labels:
   github.repo: "Sabayon"
   github.owner: "pkgs-checker"
-  original.package.version: "0.8.1"
+  original.package.version: "0.8.2"
   original.package.name: "pkgs-checker"
 #conflicts:
 #- name: "pkgs-checker"
