--- a/multi-arch/packages/distrobuilder/build.yaml
+++ b/multi-arch/packages/distrobuilder/build.yaml
@@ -16,7 +16,7 @@ package_dir: /{{ .Values.name }}
 steps:
 - >-
   cd /go/src/github.com/{{ ( index .Values.labels "github.repo" ) }}/{{ .Values.name }} &&
-  git checkout distrobuilder-${PACKAGE_VERSION%\+*} &&
+  git checkout v${PACKAGE_VERSION%\+*} &&
   make &&
   mkdir /{{ .Values.name }}/usr/bin -p &&
   mv /go/bin/{{ .Values.name }} /{{ .Values.name }}/usr/bin/{{ .Values.name }}
