--- a/amd64/packages/toolchain/build.yaml
+++ b/amd64/packages/toolchain/build.yaml
@@ -1,10 +1,13 @@
 image: "quay.io/mocaccino/micro-toolchain:latest"
 prelude:
-- |
-   luet install \
-   utils/autoconf utils/curl development/make libs/zlib vcs/git \
-   development/automake development/pkg-config development/m4 \
-   system/musl-compat
+- >-
+  luet install repository/mocaccino-micro-stable &&
+  luet uninstall repository/mocaccino-micro &&
+  luet install
+  utils/autoconf utils/curl development/make libs/zlib vcs/git
+  development/automake development/pkg-config development/m4
+  system/musl-compat &&
+  luet cleanup
 env:
 - MUSL_TARGET=x86_64-mocaccino-linux-musl
 - MUSL_ARCH=x86
