ddev-util/mottainai-server: Bump v.0.1.0_pre20210823+1

--- a/multi-arch/packages/mottainai-server/definition.yaml
+++ b/multi-arch/packages/mottainai-server/definition.yaml
@@ -1,6 +1,6 @@
 category: "dev-util"
 name: "mottainai-server"
-version: "0.1.0_pre20210823"
+version: "0.1.0_pre20210823+1"
 requires:
 - category: "users"
   name: "mottainai-server"
