--- a/multi-arch/packages/mottainai-cli/definition.yaml
+++ b/multi-arch/packages/mottainai-cli/definition.yaml
@@ -1,6 +1,6 @@
 category: "dev-util"
 name: "mottainai-cli"
-version: "0.1.0_pre20210823"
+version: "0.1.0_pre20210823+1"
 labels:
   github.repo: "MottainaiCI"
   github.owner: "mottainai-cli"
