--- a/multi-arch/packages/mottainai-dashboard/definition.yaml
+++ b/multi-arch/packages/mottainai-dashboard/definition.yaml
@@ -1,6 +1,10 @@
 category: "www-apps"
 name: "mottainai-dashboard"
-version: "0.1.0_pre20210826"
+version: "0.1.0_pre20210827"
+license: "GPL-3.0"
+description: "A web frontend for MottainaiCI"
+uri:
+- "https://github.com/MottainaiCI/mottainai-dashboard"
 requires:
 - category: "groups"
   name: "mottainai"
