www-apps/mottainai-dashboard: Tag contains prefix

--- a/multi-arch/packages/mottainai-dashboard/build.yaml
+++ b/multi-arch/packages/mottainai-dashboard/build.yaml
@@ -13,7 +13,7 @@ env:
 package_dir: /{{ .Values.name }}
 steps:
 - >-
-  cd /build && git checkout "${GIT_HASH%\+*}" &&
+  cd /build && git checkout v"${GIT_HASH%\+*}" &&
   npm ci --silent &&
   npm run build
 - >-
