--- a/multi-arch/packages/simplestreams-builder/definition.yaml
+++ b/multi-arch/packages/simplestreams-builder/definition.yaml
@@ -1,10 +1,9 @@
 category: "app-emulation"
 name: "simplestreams-builder"
-version: "0.2.0_pre20210627"
+version: "0.1.1"
 labels:
   github.repo: "MottainaiCI"
   github.owner: "simplestreams-builder"
-  github.hash: "1be64abb9df0102f75f8afc8e8539f1529255fc1"
 description: "LXC/LXD Simplestreams Tree Builder"
 uri:
 - "https://github.com/MottainaiCI/simplestreams-builder"
