--- a/multi-arch/packages/edgevpn/build.yaml
+++ b/multi-arch/packages/edgevpn/build.yaml
@@ -9,7 +9,7 @@ env:
 - GIT_HASH={{ ( index .Values.labels "git.hash" ) }}
 - CGO_ENABLED=0
 steps:
-- luet install -y shells/bash
+- luet install -y --force shells/bash
 - |
   PACKAGE_VERSION=${PACKAGE_VERSION%\+*} && \
   cd go/src/github.com/${GITHUB_ORG}/{{ .Values.name }}/  && git checkout v"${PACKAGE_VERSION}" -b build && go build && mv {{.Values.name}} /usr/bin/
