--- a/packages/yq4/build.yaml
+++ b/packages/yq4/build.yaml
@@ -12,5 +12,5 @@ steps:
 - | 
    PACKAGE_VERSION=${PACKAGE_VERSION%\+*} && \
    mkdir -p /${PACKAGE_NAME}/usr/bin && \
-   curl -L https://github.com/mikefarah/${PACKAGE_NAME}/releases/download/${PACKAGE_VERSION}/yq_linux_{{.Values.arch}} -o /${PACKAGE_NAME}/usr/bin/${PACKAGE_NAME} && \
+   curl -L https://github.com/mikefarah/yq/releases/download/${PACKAGE_VERSION}/yq_linux_{{.Values.arch}} -o /${PACKAGE_NAME}/usr/bin/${PACKAGE_NAME} && \
    chmod +x /${PACKAGE_NAME}/usr/bin/${PACKAGE_NAME}
