--- a/packages/triangle/build.yaml
+++ b/packages/triangle/build.yaml
@@ -12,7 +12,8 @@ steps:
 - | 
    PACKAGE_VERSION=${PACKAGE_VERSION%\+*} && \
    mkdir -p /${PACKAGE_NAME}/usr/bin && \
-   curl -L https://github.com/esimov/triangle/releases/download/v${PACKAGE_VERSION}/triangle-$PACKAGE_VERSION-linux-{{.Values.arch}}.tar.gz | tar -xvf - -C /${PACKAGE_NAME}/usr/bin && \
+   curl -L https://github.com/esimov/triangle/releases/download/v${PACKAGE_VERSION}/triangle-$PACKAGE_VERSION-linux-{{.Values.arch}}.tar.gz | tar -xzvf - -C ./ && \
+   mv triangle-$PACKAGE_VERSION-linux-{{.Values.arch}}/triangle /$PACKAGE_NAME/usr/bin/${PACKAGE_NAME} && \
    chmod +x /${PACKAGE_NAME}/usr/bin/${PACKAGE_NAME}
 
 includes:
