--- a/packages/skopeo/build.yaml
+++ b/packages/skopeo/build.yaml
@@ -8,7 +8,11 @@ env:
 - GITHUB_ORG={{ ( index .Values.labels "github.owner" ) }}
 - GITHUB_REPO={{ ( index .Values.labels "github.repo" ) }}
 - GIT_HASH={{ ( index .Values.labels "git.hash" ) }}
+{{ if .Values.static }}
 - CGO_ENABLED=0
+- BUILDTAGS=containers_image_openpgp
+- GO_DYN_FLAGS=
+{{ end }}
 steps:
 - cd go/src/github.com/${GITHUB_ORG}/$GITHUB_REPO/  && git checkout v"${PACKAGE_VERSION}" -b build && make bin/skopeo && mv bin/skopeo /usr/bin/
 - chmod +x /usr/bin/{{.Values.name}}
