build arm on gha

--- a/packages/charty/build.yaml
+++ b/packages/charty/build.yaml
@@ -1,3 +1,4 @@
+{{ if eq .Values.arch "amd64" }}
 image: golang
 prelude:
 - apt-get update
@@ -6,6 +7,7 @@ prelude:
 steps:
 - |
   PACKAGE_VERSION=${PACKAGE_VERSION%\+*} && \
-  cd charty && git checkout "v${PACKAGE_VERSION}" && make deps multiarch-build && mv release/charty-*-linux-amd64 /usr/bin/charty
+  cd charty && git checkout "v${PACKAGE_VERSION}" && make deps multiarch-build && mv release/charty-*-linux-{{.Values.arch}} /usr/bin/charty
 includes:
 - /usr/bin/charty
+{{ end }}
