--- a/packages/dasel/build.yaml
+++ b/packages/dasel/build.yaml
@@ -1,6 +1,8 @@
-image: "quay.io/mocaccino/extra"
+requires:
+- name: "toolchain-go"
+  category: "development"
+  version: ">=0"
 prelude:
-- luet install -y development/make lang/go vcs/git
 - mkdir go/src/github.com/${GITHUB_ORG}/ -p
 - cd go/src/github.com/${GITHUB_ORG}/ && git clone https://github.com/${GITHUB_ORG}/{{ .Values.name }}.git
 env:
@@ -10,7 +12,6 @@ env:
 - CGO_ENABLED=0
 #- GOARCH=arm
 steps:
-- luet install -y shells/bash
 - | 
   PACKAGE_VERSION=${PACKAGE_VERSION%\+*} && \
   cd go/src/github.com/${GITHUB_ORG}/{{ .Values.name }}/  && git checkout v"${PACKAGE_VERSION}" -b build && go build -o dasel ./cmd/dasel && mv {{ .Values.name }} /usr/bin/{{ .Values.name }}
