--- a/packages/edgevpn/build.yaml
+++ b/packages/edgevpn/build.yaml
@@ -1,6 +1,8 @@
-image: "quay.io/mocaccino/extra"
+requires:
+- name: "toolchain-go"
+  category: "development"
+  version: ">=0"
 prelude:
-- luet install -y development/make lang/go vcs/git
 - mkdir go/src/github.com/${GITHUB_ORG}/ -p
 - cd go/src/github.com/${GITHUB_ORG}/ && git clone https://github.com/${GITHUB_ORG}/{{ .Values.name }}.git
 env:
@@ -9,7 +11,6 @@ env:
 - GIT_HASH={{ ( index .Values.labels "git.hash" ) }}
 - CGO_ENABLED=0
 steps:
-- luet install -y --force shells/bash
 - |
   PACKAGE_VERSION=${PACKAGE_VERSION%\+*} && \
   cd go/src/github.com/${GITHUB_ORG}/{{ .Values.name }}/  && git checkout v"${PACKAGE_VERSION}" -b build && go build -ldflags="-w -s -X github.com/mudler/edgevpn/internal.Version=v$PACKAGE_VERSION" && mv {{.Values.name}} /usr/bin/
