--- a/packages/gh/build.yaml
+++ b/packages/gh/build.yaml
@@ -4,13 +4,17 @@ requires:
   version: ">=0"
 
 package_dir: /{{.Values.name}}
+env:
+{{ if eq .Values.arch "arm" }}
+- ARCH=armv6
+{{ else }}
+- ARCH={{.Values.arch}}
+{{ end }}
 
-prelude:
-- luet install libs/libressl utils/ca-certificates utils/curl libs/zlib
 steps:
 - | 
    PACKAGE_VERSION=${PACKAGE_VERSION%\+*} && \
    mkdir -p /${PACKAGE_NAME}/usr/bin && \
-   curl -L https://github.com/cli/cli/releases/download/v${PACKAGE_VERSION}/gh_${PACKAGE_VERSION}_linux_{{.Values.arch}}.tar.gz -o archive.tar.gz && \
-   tar xvf archive.tar.gz && mv gh_${PACKAGE_VERSION}_linux_{{.Values.arch}}/bin/${PACKAGE_NAME} /${PACKAGE_NAME}/usr/bin/${PACKAGE_NAME} && \
+   curl -L https://github.com/cli/cli/releases/download/v${PACKAGE_VERSION}/gh_${PACKAGE_VERSION}_linux_$ARCH.tar.gz -o archive.tar.gz && \
+   tar xvf archive.tar.gz && mv gh_${PACKAGE_VERSION}_linux_$ARCH/bin/${PACKAGE_NAME} /${PACKAGE_NAME}/usr/bin/${PACKAGE_NAME} && \
    chmod +x /${PACKAGE_NAME}/usr/bin/${PACKAGE_NAME}
