--- a/packages/lxd-compose/build.yaml
+++ b/packages/lxd-compose/build.yaml
@@ -1,9 +1,12 @@
-image: "quay.io/mocaccino/extra"
+requires:
+- name: "toolchain-go"
+  category: "development"
+  version: ">=0"
 prelude:
-- luet install -y development/make lang/go vcs/git
 - git clone https://github.com/MottainaiCI/lxd-compose.git
 env:
 - GIT_HASH=v{{ .Values.version }}
+- CGO_ENABLED=0
 steps:
 - cd lxd-compose && git checkout "${GIT_HASH%\+*}" && make build && mv lxd-compose /usr/bin/lxd-compose
 includes:
