--- a/packages/pkgs-checker-minimal/build.yaml
+++ b/packages/pkgs-checker-minimal/build.yaml
@@ -1,6 +1,8 @@
-image: "quay.io/mocaccino/extra"
+requires:
+- name: "toolchain-go"
+  category: "development"
+  version: ">=0"
 prelude:
-- luet install development/make lang/go vcs/git
 - mkdir -p /go/src/github.com/{{ ( index .Values.labels "github.repo" ) }}
 - cd /go/src/github.com/{{ ( index .Values.labels "github.repo" ) }} && git clone https://github.com/{{ ( index .Values.labels  "github.repo" ) }}/{{ ( index .Values.labels "original.package.name" ) }}
 env:
