--- a/packages/screego/build.yaml
+++ b/packages/screego/build.yaml
@@ -3,14 +3,19 @@ requires:
   name: "toolchain"
   version: ">=0"
 
+env:
+{{ if eq .Values.arch "arm" }}
+- ARCH=armv7
+{{ else }}
+- ARCH={{.Values.arch}}
+{{ end }}
+
 package_dir: /{{.Values.name}}
 
-prelude:
-- luet install libs/libressl utils/ca-certificates utils/curl libs/zlib
 steps:
 - | 
    PACKAGE_VERSION=${PACKAGE_VERSION%\+*} && \
    mkdir -p /${PACKAGE_NAME}/usr/bin && \
-   curl -L https://github.com/screego/server/releases/download/v${PACKAGE_VERSION}/screego_${PACKAGE_VERSION}_linux_{{.Values.arch}}.tar.gz -o archive.tar.gz && \
+   curl -L https://github.com/screego/server/releases/download/v${PACKAGE_VERSION}/screego_${PACKAGE_VERSION}_linux_$ARCH.tar.gz -o archive.tar.gz && \
    tar xvf archive.tar.gz && mv ${PACKAGE_NAME} /${PACKAGE_NAME}/usr/bin/${PACKAGE_NAME} && \
    chmod +x /${PACKAGE_NAME}/usr/bin/${PACKAGE_NAME}
