--- a/packages/simplestreams-builder/build.yaml
+++ b/packages/simplestreams-builder/build.yaml
@@ -1,8 +1,9 @@
-image: "quay.io/mocaccino/extra"
+requires:
+- name: "toolchain-go"
+  category: "development"
+  version: ">=0"
 prelude:
 - >-
-  luet install -y development/make lang/go vcs/git --force &&
-  luet cleanup &&
   git clone https://github.com/{{ ( index .Values.labels "github.repo" ) }}/{{ .Values.name }}.git
 - >-
   cd {{ .Values.name }} && git checkout "${GIT_TAG%\+*}" &&
@@ -11,5 +12,5 @@ prelude:
   cp {{ .Values.name }} /{{ .Values.name }}/usr/bin/
 env:
 - GIT_TAG=v{{ .Values.version }}
-- LUET_NOLOCK=true
+- CGO_ENABLED=0
 package_dir: /{{ .Values.name }}
