--- a/packages/triangle/build.yaml
+++ b/packages/triangle/build.yaml
@@ -1,12 +1,10 @@
+{{ if eq .Values.arch "amd64" }}
 requires:
 - category: "development"
   name: "toolchain"
   version: ">=0"
 
 package_dir: /{{.Values.name}}
-
-prelude:
-- luet install libs/libressl utils/ca-certificates utils/curl libs/zlib
 
 steps:
 - | 
@@ -18,3 +16,4 @@ steps:
 
 includes:
 - /usr/bin/{{.Values.name}}
+{{end}}
