--- a/packages/whalebrew/build.yaml
+++ b/packages/whalebrew/build.yaml
@@ -1,6 +1,8 @@
-image: "quay.io/mocaccino/extra"
+requires:
+- name: "toolchain-go"
+  category: "development"
+  version: ">=0"
 prelude:
-- luet install -y development/make lang/go vcs/git
 - mkdir go/src/github.com/${GITHUB_ORG}/ -p
 - cd go/src/github.com/${GITHUB_ORG}/ && git clone https://github.com/${GITHUB_ORG}/{{ .Values.name }}.git
 env:
@@ -8,7 +10,6 @@ env:
 - GITHUB_ORG={{ ( index .Values.labels "github.owner" ) }}
 - CGO_ENABLED=0
 steps:
-- luet install -y shells/bash
 - |
    PACKAGE_VERSION=${PACKAGE_VERSION%\+*} && \
    cd go/src/github.com/${GITHUB_ORG}/{{ .Values.name }}/ && git checkout "${PACKAGE_VERSION}" -b build && go build && mv {{ .Values.name }} /usr/bin/{{ .Values.name }}
