--- a/packages/toolchain/build.yaml
+++ b/packages/toolchain/build.yaml
@@ -1,20 +1,12 @@
 {{ if eq .Values.arch "arm" }}
-image: "quay.io/mocaccino/micro-toolchain:latest"
+image: "alpine"
 prelude:
-- |
-   luet install \
-   utils/autoconf utils/curl development/make libs/zlib vcs/git \
-   development/automake development/pkg-config development/m4 \
-   system/musl-compat
-env:
-- MUSL_TARGET=armv7a-mocaccino-linux-musleabihf
-- MUSL_ARCH=arm
-- MUSL_CPU=armv7a
-- MUSL_CPU_LD=armv7a
+- apk update
+- apk add curl make git
+- curl -L https://github.com/mudler/luet/releases/download/0.20.10/luet-0.20.10-linux-arm64 --output /usr/bin/luet
+- chmod +x /usr/bin/luet
 - LUET_YES=true
-
 {{ else }}
-
 image: "quay.io/mocaccino/micro-toolchain:latest"
 prelude:
 - >-
