--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,6 +51,14 @@ jobs:
         sudo rm -rf /usr/share/dotnet # will release about 20GB if you don't need .NET
     - run: |
         git fetch --prune --unshallow
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@master
+      with:
+        platforms: all
+
+    - name: Set up Docker Buildx
+      id: buildx
+      uses: docker/setup-buildx-action@master
     # CONFIGURE: we might use quay here in our example, adapt as needed
     - name: Login to Quay Registry
       if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
@@ -76,6 +84,7 @@ jobs:
       run: echo "PUSH_CACHE=true" >> $GITHUB_ENV
     - name: Build packages 🔧
       run: |
+        docker buildx install
         export PATH=$PATH:/usr/local/go/bin
         mkdir build || true
         pushd ./.github
