--- a/packages/kubectl/definition.yaml
+++ b/packages/kubectl/definition.yaml
@@ -1,6 +1,6 @@
 name: kubectl
 category: container
-version: "1.23.1"
+version: "1.23.1+0"
 labels:
   github.repo: "kubectl"
   github.owner: "kubernetes"
