--- a/packages/toolchain/build.yaml
+++ b/packages/toolchain/build.yaml
@@ -11,6 +11,15 @@ prelude:
 - chmod +x /usr/bin/luet
 - LUET_YES=true
 {{ else }}
+{{ if eq .Values.name "toolchain-go" }}
+image: "golang:1.17-alpine"
+prelude:
+- apk update
+- apk add curl make git bash
+- curl -L https://github.com/mudler/luet/releases/download/0.20.10/luet-0.20.10-linux-amd64 --output /usr/bin/luet
+- chmod +x /usr/bin/luet
+- LUET_YES=true
+{{ else }}
 image: "quay.io/mocaccino/micro-toolchain:latest"
 prelude:
 - >-
@@ -19,9 +28,6 @@ prelude:
   utils/autoconf utils/curl development/make libs/zlib vcs/git
   development/automake development/pkg-config development/m4
   system/musl-compat
-{{ if eq .Values.name "toolchain-go" }}
-- luet install lang/go
-{{ end }}
 - luet cleanup
 env:
 - MUSL_TARGET=x86_64-mocaccino-linux-musl
