--- a/packages/toolchain/collection.yaml
+++ b/packages/toolchain/collection.yaml
@@ -4,4 +4,7 @@ packages:
   version: "0.5"
 - name: toolchain-go
   category: development
-  version: "0.7"
+  version: "1.17"
+- name: toolchain-go
+  category: development
+  version: "1.18"
