--- a/packages/ipfs/build.yaml
+++ b/packages/ipfs/build.yaml
@@ -1,7 +1,7 @@
 requires:
 - name: "toolchain-go"
   category: "development"
-  version: ">=0"
+  version: "1.17"
 prelude:
 - mkdir go/src/github.com/${GITHUB_ORG}/ -p
 - cd go/src/github.com/${GITHUB_ORG}/ && git clone https://github.com/${GITHUB_ORG}/${GITHUB_REPO}.git
