--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,7 @@ jobs:
       - name: Install deps
         run: |
           curl https://get.mocaccino.org/luet/get_luet_root.sh | sudo sh
+          sudo luet install -y repository/mocaccino-extra
           sudo luet install utils/jq
       - name: Set matrix for build
         id: set-matrix
