--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
         run: |
           curl https://get.mocaccino.org/luet/get_luet_root.sh | sudo sh
           sudo luet install -y repository/mocaccino-extra
-          sudo luet install utils/jq
+          sudo luet install -y utils/jq
       - name: Set matrix for build
         id: set-matrix
         run: |
