--- a/packages/yip/build.yaml
+++ b/packages/yip/build.yaml
@@ -6,7 +6,7 @@ prelude:
 steps:
 - | 
    PACKAGE_VERSION=${PACKAGE_VERSION%\+*} && \
-   cd ${PACKAGE_NAME} && git checkout "${PACKAGE_VERSION}" && make build && mv yip /usr/bin/yip
+   cd ${PACKAGE_NAME} && git checkout "v${PACKAGE_VERSION}" && make build && mv yip /usr/bin/yip
 - chmod +x /usr/bin/yip
 includes:
 - /usr/bin/yip
