--- a/packages/docker/build.yaml
+++ b/packages/docker/build.yaml
@@ -1,7 +1,7 @@
 requires:
 - category: "development"
-  name: "toolchain"
-  version: ">=0"
+  name: "toolchain-go"
+  version: ">=1.21"
 
 package_dir: /docker
 env:
